# RAG

./: .gitignore  RAG Learning Journal.docx  README.md  docker-compose.yml  pyproject.toml  ~$G Learning Journal.docx
RAG Learning Journal/: Backup of RAG Learning Journal.docx
