[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "industrial-rag-arrow"
version = "0.1.0"
description = "Production-grade RAG pipeline following the Industrial RAG Arrow."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sse-starlette>=2.1.3",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "orjson>=3.10.0",
  "httpx>=0.27.0",
  "tenacity>=9.0.0",
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "datasets>=2.21.0",
  "huggingface-hub>=0.24.0",
  "transformers>=4.44.0",
  "sentence-transformers>=3.0.0",
  "FlagEmbedding>=1.3.3",
  "qdrant-client>=1.11.0",
  "rank-bm25>=0.2.2",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "scikit-learn>=1.5.1",
  "pymupdf>=1.24.9",
  "pypdf>=4.3.1",
  "jinja2>=3.1.4",
  "tqdm>=4.66.5",
  "ragas>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.4",
  "mypy>=1.11.1",
  "ipykernel>=6.29.5",
]

gpu = [
  "vllm",
]
